Issue 1392 - Let lines break inside navigation tabs if text is too long

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -515,7 +515,6 @@ button:focus,
 .ui-tabs-nav li
 {
   background-color: #FBFBFB;
-  white-space: nowrap;
   padding: 0;
   background-image: none;
   list-style: none;
